--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
+    "serve": "^11.0.0",
     "uuid": "^3.3.2"
   },
   "scripts": {
